--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -629,7 +629,7 @@ async function generatePDF() {
         logo.onload = () => {
             doc.addImage(logo, 'PNG', 90, 10, 30, 30);
             doc.setFontSize(20);
-            doc.text('Hannah Quiz', 105, 50, null, null, 'center');
+            doc.text('Hannah Test', 105, 50, null, null, 'center');
 
             doc.setFontSize(12);
             doc.text('Name: ____________________________________', 20, 70);
