--- a/Atividades/TestQuizLidoABC/index.html
+++ b/Atividades/TestQuizLidoABC/index.html
@@ -301,7 +301,7 @@ function handleError(message) {
 async function loadQuestions() {
     try {
         const { level, unit } = getParamsFromURL();
-        const questionFilePath = `../../../../${level}/${unit}/DataTestQuizLeVeAB/questions.txt`;
+        const questionFilePath = `../../../../${level}/${unit}/DataTestQuizLidoABC/questions.txt`;
 
         console.log("Loading questions from:", questionFilePath); // Log para depuração
 
@@ -535,7 +535,7 @@ async function updateProgressInDatabase(userId, grade) {
 
 async function loadGrade(userId) {
     const { level, unit } = getParamsFromURL();
-    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/Quiz test - question and image`);
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/Quiz test - question`);
     const gradeDisplay = document.getElementById("grade-display");
 
     try {
@@ -571,7 +571,7 @@ async function loadGrade(userId) {
 // Salva a nota do usuário
 async function saveGrade(userId, grade) {
     const { level, unit } = getParamsFromURL();
-    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/Quiz test - question and image`);
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/Quiz test - question`);
 
     try {
         const snapshot = await dbRef.once("value");
