--- a/Atividades/TestQuizLidoABC/index.html
+++ b/Atividades/TestQuizLidoABC/index.html
@@ -615,7 +615,7 @@ function generatePDF() {
 
         // Adiciona o título
         doc.setFontSize(20);
-        doc.text('Hannah Quiz', 105, 50, null, null, 'center');
+        doc.text('Hannah Test', 105, 50, null, null, 'center');
 
         // Adiciona campos para nome e data
         doc.setFontSize(12);
