--- a/Atividades/TestQuizEscutaC2/index.html
+++ b/Atividades/TestQuizEscutaC2/index.html
@@ -195,7 +195,7 @@
 <script>
 // Configuração do Firebase
 const firebaseConfig = {
-    apiKey: "AIzaSyDxxxxxxxxxxxxxxx",
+    apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
     authDomain: "hannahenglishcourse.firebaseapp.com",
     projectId: "hannahenglishcourse",
     storageBucket: "hannahenglishcourse.appspot.com",
